--- a/style.css
+++ b/style.css
@@ -72,12 +72,12 @@ transform: translate(-50%, -50%);
     background-color: rgb(185, 136, 136);
     cursor: pointer;
 }
-.nav{
+nav{
     display:flex;
     padding: 2% 6%;
     justify-content: space-between;
 }
-.nav img{
+nav img{
 width:150px;
 }
 .nav-links{
