--- a/style.css
+++ b/style.css
@@ -1096,8 +1096,8 @@ text-align: center;
     schooool-col{
         position:absolute;
         top:0;
-        left:28%;
-        padding-top: 20%;
+        left:20%;
+        padding-top: 15%;
     }
     .schooool-col h3{
         color: aliceblue;
@@ -1112,7 +1112,7 @@ text-align: center;
        
     }
     .schooool-col ul{
-        padding-top:2%;
+        padding-top:1%;
     }
     .schooool-col ul li{
         padding-top:1%;
@@ -1139,7 +1139,7 @@ text-align: center;
    
 }
 .schooool-coltwo p{
-    color:rgb(37, 86, 90);
+    color:#0ef;
     padding-top: 5%;
     font-size: 18px;
 
@@ -1165,7 +1165,7 @@ text-align: center;
     }
     .schooool-coltwo p{
         color:#0ef;
-        padding-top: 4%;
+        padding-top: 2%;
         font-size: 16px;
     
     }
