--- a/style.css
+++ b/style.css
@@ -1116,10 +1116,10 @@ text-align: center;
        
     }
     .schooool-col ul{
-        padding-top:1%;
+        padding-top:0%;
     }
     .schooool-col ul li{
-        padding-top:1%;
+        padding-top:0px;
         color:rgb(245, 245, 231);
         font-size: 11px;
     }
