--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ transform: translate(-50%, -50%);
     padding: 2% 6%;
     justify-content: space-between;
 }
-.nav img{
+.nav a img{
 width:150px;
 display:none;    
 }
