--- a/style.css
+++ b/style.css
@@ -53,6 +53,14 @@ transform: translate(-50%, -50%);
     color:white;
     font-weight: 700;
 }
+@media(max-width:700px){
+    .text-box h1{
+    font-size: 36px;
+    margin-bottom:0;
+    color:white;
+    font-weight: 700;
+}
+}
 .text-box p{
     font-size: 16px; 
     margin-top: 15px;
