--- a/style.css
+++ b/style.css
@@ -85,8 +85,10 @@ transform: translate(-50%, -50%);
     padding: 2% 6%;
     justify-content: space-between;
 }
-.nav a img{
-width:150px;
+nav  img{
+width:55px;
+    height: 60px;
+    border-radius:50%;
 display:none;    
 }
 .nav-links{
