--- a/style.css
+++ b/style.css
@@ -1224,3 +1224,106 @@ flex-direction: column;
         padding-top: 50px;
     }
 }
+
+.spinning-pic{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    min-height: 70vh;
+    background-image: url(picturess/holder.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow:hidden;
+    margin-top: 30px;
+    margin-bottom: 5%;
+}
+.slider-container{
+    position:relative;
+    width:600px;
+    height: 380px;
+    perspective: 1000px;
+  
+}
+.slider{
+    position:absolute;
+    width:100%;
+    height:100%;
+    transform-style:preserve-3d;
+    animation: rotate 40s infinite linear;
+    -webkit-box-reflect: below 0.5px linear-gradient(trasparent, trasparent, rgba(3,3,3,0.2));
+}
+.slide{
+    position:absolute;
+    width:60%
+    height: 60%;
+    left: 20%;
+    margin-top: 10%;
+    border-radius: 15px;
+    overflow:hidden;
+    transform-style: preserve-3d;
+    transition:transform 1s;
+
+}
+.slide img{
+    width:100%;
+    height: 100%;
+    object-fit:cover;
+}
+.slide:nth-child(1){ transform: rotateY(0deg) translateZ(400px);}
+.slide:nth-child(2){ transform: rotateY(72deg) translateZ(400px);}
+.slide:nth-child(3){ transform: rotateY(144deg) translateZ(400px);}
+.slide:nth-child(4){ transform: rotateY(216deg) translateZ(400px);}
+.slide:nth-child(5){ transform: rotateY(288deg) translateZ(400px);}
+.slide:nth-child(6){ transform: rotateY(360deg) translateZ(400px);}
+
+
+
+
+@keyframes rotate{
+    0%{ transform: rotateY(0deg);}
+    20%{ transform: rotateY(72deg);}
+    40%{ transform: rotateY(144deg);}
+    60%{ transform: rotateY(216deg);}
+    80%{ transform: rotateY(288deg);}
+    100%{ transform: rotateY(360deg);}
+ 
+
+  
+}
+.slider-container:hover .slider{
+    animation-play-state: paused;
+}
+@media (max-width: 400px) {
+
+    .slider-container{
+    position:relative;
+    width:270px;
+    height: 300px;
+    perspective: 1000px;
+  
+}
+.spinning-pic{
+   
+    min-height: 60vh;
+}
+.slide{
+    position:absolute;
+    width:60%
+    height: 80%;
+    left: 10%;
+    right: 10%;
+    top: 10%;
+    border-radius: 15px;
+    overflow:hidden;
+    transform-style: preserve-3d;
+    transition:transform 1s;
+
+}
+.slide:nth-child(1){ transform: rotateY(0deg) translateZ(150px);}
+.slide:nth-child(2){ transform: rotateY(72deg) translateZ(150px);}
+.slide:nth-child(3){ transform: rotateY(144deg) translateZ(150px);}
+.slide:nth-child(4){ transform: rotateY(216deg) translateZ(150px);}
+.slide:nth-child(5){ transform: rotateY(288deg) translateZ(150px);}
+.slide:nth-child(6){ transform: rotateY(360deg) translateZ(150px);}
+}
