--- a/style.css
+++ b/style.css
@@ -676,6 +676,10 @@ font-weight: bold;
         width:90%;
         margin: auto;
     }
+    .club-socities{
+    width:90%;
+    margin:auto;
+    }
     .road-map{
         width:90%;
         margin: auto;
